# pyspice

./: .gitignore  README.md  pyproject.toml
artifacts/sessions/20260217_201736/: circuit.cir  circuit.op.raw  circuit.raw
src/pyspice/: __init__.py  config.py  doctor.py  llm.py  ltspice_runner.py  main.py  netlist_validation.py  plotter.py  raw_parser.py
tests/: test_config.py  test_llm.py
